--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
             <p>There were <strong>2</strong> shootings today.</p>
         </div>
         <div class="main">
-                        <a class="twitter-timeline"  href="https://twitter.com/whogotshot" data-widget-id="652626099604578304">Tweets by @whogotshot</a>
+            <a class="twitter-timeline"
+               href="https://twitter.com/whogotshot"
+               data-widget-id="652626099604578304">
+                Tweets by @whatgotshot</a>
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </div>
 
