--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <h1>YES</h1>
-        <div class="detail">
-            <p>There were <strong>2</strong> shootings today.</p>
-        </div>
+        <h1>MOST LIKELY</h1>
         <div class="main">
             <a class="twitter-timeline"
                href="https://twitter.com/whatgotshot"
